--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <title>L-Boap/Website</title>
 </head>
+
+<header>
+  <div class="home">
+    <h1>L-Boap</h1>
+    <p>Local-Based Online Ad Platform</p>
+    <p>札幌とシリコンバレーの天才大学生集団が作る未来の広告PF</p>
+  </div>
+</header>
+
 <body>
-  
+  <h1>Message</h1>
+  <p>CEO　Shuta Kuwabara</p>
+<img src="oshuu.png" width="720" height="480" alt="CEOの写真">
+<p>I will change common sence of ad platform in the future with my mates!
+</p>
 </body>
 </html>
