--- a/index.html
+++ b/index.html
@@ -22,5 +22,19 @@
 <img src="oshuu.png" width="720" height="480" alt="CEOの写真">
 <p>I will change common sence of ad platform in the future with my mates!
 </p>
+
+<h1>Memeber</h1>
+<div class="block one">
+  <h4> 名前 </h4>
+  <P>くわばら</P>
+
+  <h4>経歴</h4>
+  <p>小卒</p>
+
+  <h4>一言</h4>
+  <p>ぴえん</p>
+
+
+</div>
 </body>
 </html>
