メンバー紹介

--- a/index.html
+++ b/index.html
@@ -34,6 +34,38 @@
   <h4>一言</h4>
   <p>ぴえん</p>
 
+  <h1>Memeber</h1>
+<div class="block one">
+  <h4> 名前 </h4>
+  <P>くわばら</P>
+
+  <h4>経歴</h4>
+  <p>小卒</p>
+
+  <h4>一言</h4>
+  <p>ぴえん</p>
+
+  <h1>Memeber</h1>
+<div class="block one">
+  <h4> 名前 </h4>
+  <P>くわばら</P>
+
+  <h4>経歴</h4>
+  <p>小卒</p>
+
+  <h4>一言</h4>
+  <p>ぴえん</p>
+
+  <h1>Memeber</h1>
+<div class="block one">
+  <h4> 名前 </h4>
+  <P>くわばら</P>
+
+  <h4>経歴</h4>
+  <p>小卒</p>
+
+  <h4>一言</h4>
+  <p>ぴえん</p>
 
 </div>
 </body>
