--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </p>
 
 
-<h1>Memeber</h1>
+<h1>Member</h1>
 <div class="block one">
   <h4> 名前 </h4>
   <P>くわばら</P>
@@ -35,7 +35,7 @@
   <h4>一言</h4>
   <p>ぴえん</p>
 
-  <h1>Memeber</h1>
+  <h1>Member</h1>
 <div class="block one">
   <h4> 名前 </h4>
   <P>くわばら</P>
@@ -46,7 +46,7 @@
   <h4>一言</h4>
   <p>ぴえん</p>
 
-  <h1>Memeber</h1>
+  <h1>Member</h1>
 <div class="block one">
   <h4> 名前 </h4>
   <P>くわばら</P>
@@ -57,7 +57,7 @@
   <h4>一言</h4>
   <p>ぴえん</p>
 
-  <h1>Memeber</h1>
+  <h1>Member</h1>
 <div class="block one">
   <h4> 名前 </h4>
   <P>くわばら</P>
