見た目綺麗

--- a/index.html
+++ b/index.html
@@ -18,10 +18,21 @@
 
 <body>
   <h1>Message</h1>
+  <div class="Message">
+    <div class="photo">
+      <img src="oshuu.png" width="720" height="480" alt="CEOの写真">
+    </div>
+  
+    <div class="sentence">
+    <p>I will change common sence of ad platform in the future with my mates!<br>
+      I will change common sence of ad platform in the future with my mates!<br>
+      I will change common sence of ad platform in the future with my mates!<br>
+      I will change common sence of ad platform in the future with my mates!<br>I will change common sence of ad platform in the future with my mates!<br>
+      I will change common sence of ad platform in the future with my mates!<br>
+    </p>
+    </div>
+  </div>
   <p>CEO　Shuta Kuwabara</p>
-<img src="oshuu.png" width="720" height="480" alt="CEOの写真">
-<p>I will change common sence of ad platform in the future with my mates!
-</p>
 
 
 <h1>Member</h1>
