デザイン変更
サイト内リンク付加

--- a/index.html
+++ b/index.html
@@ -10,14 +10,31 @@
 
 <header>
   <div class="home">
+      <P><br><br><br><br><br><br><br><br><br><br><br><br><br></P>
     <h1>L-Boap</h1>
+    <P><br><br></P>
     <p>Local-Based Online Ad Platform</p>
     <p>札幌とシリコンバレーの天才大学生集団が作る未来の広告PF</p>
   </div>
+  <P><br><br><br><br><br><br></P>
+ <div class="Header">
+   <div class="挨拶">
+     <p><a href="#message">Message<br>CEO挨拶</a></p>
+   </div> <div class="会社概要">
+      <p><a href="#member">Profile<br>会社紹介</a></p>
+    </div>
+   <div class="運営">
+     <p><a href="#member">Member<br>運営紹介</a></p>
+   </div>
+ </div>
+  
 </header>
 
+
+
+<P><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></P>
 <body>
-  <h1>Message</h1>
+  <h1 id="message">Message</h1>
   <div class="Message">
     <div class="photo">
       <img src="oshuu.png" width="720" height="480" alt="CEOの写真">
@@ -35,7 +52,7 @@
   <p>CEO　Shuta Kuwabara</p>
 
 
-<h1>Member</h1>
+<h1 id="member">Member</h1>
 <div class="block one">
   <h4> 名前 </h4>
   <P>くわばら</P>
