profile,会社概要追加しました。

--- a/index.html
+++ b/index.html
@@ -23,6 +23,62 @@
 <p>I will change common sence of ad platform in the future with my mates!
 </p>
 
+<h1>Profile</h1>
+<div class="profile">
+  <h3>会社概要</h3>
+  <p>CEO桑原率いる愉快な仲間たちの仮想世界作り</p>
+  <div>
+    <table class="table-simple">
+      <tbody>
+        <div>
+        <tr class="table-row">
+          <p><th class="table-column">商号</th></p>
+          <td class="table-column">L-Boap ,Co</td>
+        </tr>
+        <tr class="table-row">
+          <th class="table-column">所在地</th>
+          <td class="table-column">すすきのソープ街</td>
+        <tr class="table-row">
+          <th class="table-column">設立年月日</th>
+          <td class="table-column">2020年5月予定</td>
+        </tr>
+        <tr class="table-row">
+          <th class="table-column">資本金</th>
+          <td class="table-column">5円(ご縁がありますように)</td>
+        </tr>  
+        <tr class="table-row">
+          <th class="table-column">役員</th>
+          <td class="table-column">
+            <p>代表取締役兼CEO兼焼肉部長　おしう</p>
+            <p>Pornhub監査役　みつぐ</p>
+            <p>テニスの王子様　りく</p>
+            <p>アメスピ大臣　ゆう</p>
+            <p>天才エンジニア　たかぴろ</p>
+            <p>代表取締役会長兼トイレ掃除　おおむら</p>
+            <p></p>
+          </td>
+        </tr>   
+        <tr class="table-row">
+          <th class="table-column">主要子会社</th>
+          <td class="table-column">:DeNA</td>
+        </tr>               
+        <tr class="table-row">
+          <th class="table-column">事業内容</th>
+          <td class="table-column">
+          <ul>
+            <li>AV配信</li>
+            <li>広告事業</li>
+            <li>タバコ販売</li>
+            <li>援助交際</li>
+          </ul>
+          </td>
+        </tr>        
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
 <h1>Memeber</h1>
 <div class="block one">
   <h4> 名前 </h4>
