--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <tbody>
         <div>
         <tr class="table-row">
-          <p><th class="table-column">商号</th></p>
+          <th class="table-column">商号</th>
           <td class="table-column">L-Boap ,Co</td>
         </tr>
         <tr class="table-row">
