--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
 <h1 id="member">Member</h1>
-<div class="block one">
+<div class="one">
   <h4> 名前 </h4>
   <P>くわばら</P>
 
@@ -63,8 +63,7 @@
   <h4>一言</h4>
   <p>ぴえん</p>
 
-  <h1>Member</h1>
-<div class="block one">
+<div class="two">
   <h4> 名前 </h4>
   <P>くわばら</P>
 
@@ -74,8 +73,7 @@
   <h4>一言</h4>
   <p>ぴえん</p>
 
-  <h1>Member</h1>
-<div class="block one">
+<div class="three">
   <h4> 名前 </h4>
   <P>くわばら</P>
 
@@ -85,8 +83,7 @@
   <h4>一言</h4>
   <p>ぴえん</p>
 
-  <h1>Member</h1>
-<div class="block one">
+<div class="four">
   <h4> 名前 </h4>
   <P>くわばら</P>
 
