--- a/index.html
+++ b/index.html
@@ -79,6 +79,43 @@
   </div>
 </div>
 
+<h1>History</h1>
+<div class="history">
+  <h3>2020年</h3>
+  <ul>
+    <li>
+      <div>1月18日</div>
+      <p>Rina Omura参画。Yu Hiraga困惑。</p>
+    </li>
+    <li>
+      <div>1月14日</div>
+      <p>
+        CEO桑原修太（株）DeNAの買収を決意。
+        のちにDeNAを買収することになるが、この時点では二社には天地の差があった。</p>
+    </li>
+    <li>
+      <div>1月11日</div>
+      <p>茂木貴紀脱退。</p>
+    </li>
+    <li>
+      <div>1月1日</div>
+      <p>初ユーザーアンケート拡散。</p>
+    </li>
+  </ul>  
+  <h3>2019年</h3>
+  <ul>
+    <li>
+      <div>12月31日</div>
+      <p>
+        L-Boap結成。教育系コミュニティRacoonの運営メンバーが多数参画。
+      </p>
+      <p>
+        大晦日にも関わらず、年末を全く感じることなくMTGが行われた。
+      </p>
+    </li>
+  </ul>
+</div>
+
 <h1>Memeber</h1>
 <div class="block one">
   <h4> 名前 </h4>
