--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </tr>               
         <tr class="table-row">
           <th class="table-column">事業内容</th>
-          <td class="table-column">
+          <td class="table-column-project">
           <ul>
             <li>AV配信</li>
             <li>広告事業</li>
@@ -82,34 +82,36 @@
 <h1>History</h1>
 <div class="history">
   <h3>2020年</h3>
-  <ul>
+  <ul class="ul-simple">
     <li>
       <div>1月18日</div>
-      <p>Rina Omura参画。Yu Hiraga困惑。</p>
+      <p class="ul-column">
+        Rina Omura参画。Yu Hiraga困惑。
+      </p>
     </li>
     <li>
       <div>1月14日</div>
-      <p>
+      <p class="ul-column">
         CEO桑原修太（株）DeNAの買収を決意。
         のちにDeNAを買収することになるが、この時点では二社には天地の差があった。</p>
     </li>
     <li>
       <div>1月11日</div>
-      <p>茂木貴紀脱退。</p>
+      <p class="ul-column">茂木貴紀脱退。</p>
     </li>
     <li>
       <div>1月1日</div>
-      <p>初ユーザーアンケート拡散。</p>
+      <p class="ul-column">初ユーザーアンケート拡散。</p>
     </li>
   </ul>  
   <h3>2019年</h3>
-  <ul>
+  <ul class="ul-simple">
     <li>
       <div>12月31日</div>
-      <p>
+      <p class="ul-column">
         L-Boap結成。教育系コミュニティRacoonの運営メンバーが多数参画。
       </p>
-      <p>
+      <p class="ul-column">
         大晦日にも関わらず、年末を全く感じることなくMTGが行われた。
       </p>
     </li>
