--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
 
 
 <h1 id="member">Member</h1>
-<div class="one">
+<div class="member">
+  <div class="memberphoto">
+    <img src="oshuu.png" width="100" height="80" alt="CEOの写真">
+  </div>
+
+ <div class="one">
   <h4> 名前 </h4>
   <P>くわばら</P>
 
@@ -63,7 +68,7 @@
   <h4>一言</h4>
   <p>ぴえん</p>
 
-<div class="two">
+ <div class="two">
   <h4> 名前 </h4>
   <P>くわばら</P>
 
@@ -73,7 +78,7 @@
   <h4>一言</h4>
   <p>ぴえん</p>
 
-<div class="three">
+ <div class="three">
   <h4> 名前 </h4>
   <P>くわばら</P>
 
@@ -83,7 +88,7 @@
   <h4>一言</h4>
   <p>ぴえん</p>
 
-<div class="four">
+ <div class="four">
   <h4> 名前 </h4>
   <P>くわばら</P>
 
