--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
 <body>
   <h1>Message</h1>
   <p>CEO　Shuta Kuwabara</p>
-<img src="oshuu.png" width="720" height="480" alt="CEOの写真">
-<p>I will change common sence of ad platform in the future with my mates!
-</p>
+  <div class="写真＆挨拶">
+    <img src="oshuu.png" width="720" height="480" alt="CEOの写真">
+    <div class="メッセ">
+      <p>I will change common sence of ad platform in the future with my mates!
+      </p>
+  </div>
+</div>
 
 <h1>Profile</h1>
 <div class="profile">
