--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
   </ul>
 </div>
 
+
 <h1>Memeber</h1>
 <div class="block one">
 
@@ -164,7 +165,7 @@
   <p>小卒</p>
 
   <h4>一言</h4>
-  <p>ぴえん</p>
+  <p>チンポ</p>
 
 
 <div class="block one">
