--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <p>ぴえん</p>
 
 
-<div class="block one">
+<div class="two">
   <h4> 名前 </h4>
   <P>くわばら</P>
 
@@ -146,8 +146,7 @@
   
  </div>
 
-
-<div class="block one">
+<div class="three">
   <h4> 名前 </h4>
   <P>くわばら</P>
 
@@ -158,7 +157,7 @@
   <p>ぴえん</p>
 </div>
 
-<div class="block one">
+<div class="four">
 
   <h4> 名前 </h4>
   <P>くわばら</P>
