--- a/index.html
+++ b/index.html
@@ -42,10 +42,6 @@
   
     <div class="sentence">
     <p>I will change common sence of ad platform in the future with my mates!<br>
-      I will change common sence of ad platform in the future with my mates!<br>
-      I will change common sence of ad platform in the future with my mates!<br>
-      I will change common sence of ad platform in the future with my mates!<br>I will change common sence of ad platform in the future with my mates!<br>
-      I will change common sence of ad platform in the future with my mates!<br>
     </p>
     </div>
   </div>
@@ -79,13 +75,13 @@
         <tr class="table-row">
           <th class="table-column">役員</th>
           <td class="table-column">
-            <p>代表取締役兼CEO兼焼肉部長　おしう</p>
-            <p>Pornhub監査役　みつぐ</p>
-            <p>テニスの王子様　りく</p>
-            <p>アメスピ大臣　ゆう</p>
-            <p>天才エンジニア　たかぴろ</p>
-            <p>代表取締役会長兼トイレ掃除　おおむら</p>
-            <p></p>
+          　代表取締役兼CEO兼焼肉部長　おしう<br>
+            Pornhub監査役　みつぐ<br>
+            テニスの王子様　りく<br>
+            アメスピ大臣　ゆう<br>
+            天才エンジニア　たかぴろ<br>
+            一般エンジニア系女性　おおむら<br>
+            
           </td>
         </tr>   
         <tr class="table-row">
@@ -114,15 +110,21 @@
   <h3>2020年</h3>
   <ul class="ul-simple">
     <li>
+      <div>1月19日</div>
+      <p class="ul-column">
+        おーむら女性と判明。
+      </p>
+    <li>
       <div>1月18日</div>
       <p class="ul-column">
         Rina Omura参画。Yu Hiraga困惑。
       </p>
     </li>
+    </li>
     <li>
       <div>1月14日</div>
       <p class="ul-column">
-        CEO桑原修太（株）DeNAの買収を決意。
+        CEO桑原修太（株）DeNAの買収を決意。<br>
         のちにDeNAを買収することになるが、この時点では二社には天地の差があった。</p>
     </li>
     <li>
@@ -139,9 +141,7 @@
     <li>
       <div>12月31日</div>
       <p class="ul-column">
-        L-Boap結成。教育系コミュニティRacoonの運営メンバーが多数参画。
-      </p>
-      <p class="ul-column">
+        L-Boap結成。教育系コミュニティRacoonの運営メンバーが多数参画。<br>
         大晦日にも関わらず、年末を全く感じることなくMTGが行われた。
       </p>
     </li>
