コミットします

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <header>
   <div class="home">
-      <P><br><br><br><br><br><br><br><br><br><br><br><br><br></P>
+      <P><br><br></P>
     <h1>L-Boap</h1>
-    <P><br><br></P>
+    <P><div class="感覚"><br></div></P>
     <p>Local-Based Online Ad Platform</p>
     <p>札幌とシリコンバレーの天才大学生集団が作る未来の広告PF</p>
   </div>
@@ -21,7 +21,7 @@
    <div class="挨拶">
      <p><a href="#message">Message<br>CEO挨拶</a></p>
    </div> <div class="会社概要">
-      <p><a href="#member">Profile<br>会社紹介</a></p>
+      <p><a href="#intro">Profile<br>会社紹介</a></p>
     </div>
    <div class="運営">
      <p><a href="#member">Member<br>運営紹介</a></p>
@@ -49,7 +49,7 @@
 
   
 
-<h1>Profile</h1>
+<h1 id="intro">Profile</h1>
 <div class="profile">
   <h3>会社概要</h3>
   <p>CEO桑原率いる愉快な仲間たちの仮想世界作り</p>
@@ -149,7 +149,7 @@
 </div>
 
 
-<h1>Memeber</h1>
+<h1 id="member">Memeber</h1>
 <div class="block one">
 
   <h4> 名前 </h4>
