--- a/index.html
+++ b/index.html
@@ -155,8 +155,11 @@
 </div>
 
 
-<h1>Memeber</h1>
-<div class="block one">
+<h1>member</h1>
+<div class="memberone">
+  <div class="memberone">
+    <img src="oshuu.png" width="450" height="270" alt="CEOの写真">
+  </div>
 
   <h4> 名前 </h4>
   <P>くわばら</P>
@@ -166,43 +169,51 @@
 
   <h4>一言</h4>
   <p>チンポ</p>
-
-
-<div class="two">
-  <h4> 名前 </h4>
-  <P>くわばら</P>
-
-  <h4>経歴</h4>
-  <p>中卒</p>
-
-  <h4>一言</h4>
-  <p>ぴえん</p>
-  
- </div>
-
-<div class="three">
-  <h4> 名前 </h4>
-  <P>くわばら</P>
-
-  <h4>経歴</h4>
-  <p>高卒</p>
-
-  <h4>一言</h4>
-  <p>ぴえん</p>
 </div>
 
-<div class="four">
+<div class="membertwo">
+  <div class="membertwo">
+    <img src="nigger.png" width="450" height="270" alt="CEOの写真">
+  </div>
 
   <h4> 名前 </h4>
   <P>くわばら</P>
 
   <h4>経歴</h4>
-  <p>大卒</p>
+  <p>小卒</p>
 
   <h4>一言</h4>
-  <p>ぴえん</p>
+  <p>チンポ</p>
+</div>
 
-   </div>
+<div class="memberthree">
+  <div class="memberthree">
+    <img src="oshuu.png" width="450" height="270" alt="CEOの写真">
+  </div>
+
+  <h4> 名前 </h4>
+  <P>くわばら</P>
+
+  <h4>経歴</h4>
+  <p>小卒</p>
+
+  <h4>一言</h4>
+  <p>チンポ</p>
+</div>
+
+<div class="memberofour">
+  <div class="memberfour">
+    <img src="oshuu.png" width="450" height="270" alt="CEOの写真">
+  </div>
+
+  <h4> 名前 </h4>
+  <P>くわばら</P>
+
+  <h4>経歴</h4>
+  <p>小卒</p>
+
+  <h4>一言</h4>
+  <p>チンポ</p>
 </div>
 
 </body>
