--- a/index.html
+++ b/index.html
@@ -8,31 +8,27 @@
   <title>L-Boap/Website</title>
 </head>
 
-<header>
+<header class="header">
   <div class="home">
-      <P><br><br></P>
-    <h1>L-Boap</h1>
-    <P><div class="感覚"><br></div></P>
-    <p>Local-Based Online Ad Platform</p>
-    <p>札幌とシリコンバレーの天才大学生集団が作る未来の広告PF</p>
+    <h1 class="title">L-Boap</h1>
+    <p class="L-Boap">Local-Based Online Ad Platform</p>
+    <p class="description">札幌と大阪とシリコンバレーの天才大学生集団が作る未来の広告PF</p>
   </div>
-  <P><br><br><br><br><br><br></P>
- <div class="Header">
-   <div class="挨拶">
+
+ <div class="header2">
+   <div class="messageLink">
      <p><a href="#message">Message<br>CEO挨拶</a></p>
-   </div> <div class="会社概要">
-      <p><a href="#intro">Profile<br>会社紹介</a></p>
-    </div>
-   <div class="運営">
+   </div> 
+   <div class="profileLink">
+      <p><a href="#profile">Profile<br>会社紹介</a></p>
+   </div>
+   <div class="memberLink">
      <p><a href="#member">Member<br>運営紹介</a></p>
    </div>
  </div>
   
 </header>
 
-
-
-<P><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></P>
 <body>
   <h1 id="message">Message</h1>
   <div class="Message">
@@ -42,43 +38,59 @@
   
     <div class="sentence">
     <p>I will change common sence of ad platform in the future with my mates!<br>
+      <br><br>
+      いっきっきの～き～w＼ｱｲｱｲｱｲ／ いっきっきの～き～w＼ｱｲｱｲｱｲ／
+      いっきっきの～き～w(ｵﾏﾝｺ?)＼ｱｲｱｲｱｲ／ いっきっきの～き～w(ｵﾁﾝｺ?)＼ｱｲｱｲｱｲ／
+      いっきっきの～き～w(ｵﾏﾝｺ?) いっきっきの～き～w(ｵﾁﾝｺ?)
+      ｱﾚ？ｱﾚ？ｱﾚ？wｱﾚｪ？(ゆっくんにしては味わってる)(もうヤバい)
+      ゆかり？呑んでなくない？ｳｫｳ ｳｫｳ⤴ ゆかり？呑んでなくない？ｳｫｳ ｳｫｳ⤴ ゆかり
+      おっぱいまんこまんこちんこｱｲ おっぱいまんこまんこちんこ
+      おっぱいまんこまんこちんこ おっぱいまんこまんこちんこ (もういいよっ！)
+      (声デカいよ…) <br>
+      ｵﾏﾝｺｯ!ｼｮｯﾊﾟｯﾋﾟｨｰww ﾅﾒﾀﾗﾎｯｹｯｷｮｰww ｽﾞｯｺﾝﾊﾞｯｺﾝ ｽﾞｯｺﾝﾊﾞｯｺﾝww ﾁﾝｹﾞｯ!wwﾏﾝｹﾞｯ!ww
+      ｵﾏﾝｺｯｼｮｯﾊﾟｯﾋﾟｨｰww ﾅﾒﾀﾗﾎｯｹｯｷｮｰww ｽﾞｯｺﾝﾊﾞｯｺﾝ ｽﾞｯｺﾝﾊﾞｯｺﾝww ﾁﾝｹﾞｯwｗﾏﾝｹﾞｯww
+      ｵﾏﾝｺｯｼｮｯﾊﾟｯﾋﾟｨｰww ﾅﾒﾀﾗﾎｯｹｯｷｮｰww ｽﾞｯｺﾝﾊﾞｯｺﾝ ｽﾞｯｺﾝﾊﾞｯｺﾝww ﾁﾝｹﾞｯwwﾏﾝｹﾞｯwｗ
+      ｵﾏﾝｺｼｮｯﾊﾟｯﾋﾟｨｰww ﾅﾒﾀﾗﾎｯｹｯｷｮｰww ｽﾞｯｺﾝﾊﾞｯｺﾝ ｽﾞｯｺﾝﾊﾞｯｺﾝww ﾁﾝｹﾞｯwwﾏﾝｹﾞｯww
     </p>
     </div>
   </div>
-  <p>CEO　Shuta Kuwabara</p>
+  <p>CEO Shuta Kuwabara　(※自称ブサイクらしい)</p>
 
-  
+  <div class="space"></div>
 
-<h1 id="intro">Profile</h1>
-<div class="profile">
+<h1 id="profile">Profile</h1>
+  <p class="CEO">
+    CEO桑原率いる愉快な仲間たちの仮想世界作り。
+    サマーウォーズのOZの世界観だよね。
+  </p>
+  <div class="profile">
   <h3>会社概要</h3>
-  <p>CEO桑原率いる愉快な仲間たちの仮想世界作り</p>
   <div>
     <table class="table-simple">
       <tbody>
         <div>
         <tr class="table-row">
           <th class="table-column">商号</th>
-          <td class="table-column">L-Boap ,Co</td>
+          <td class="table-description">L-Boap ,Co</td>
         </tr>
         <tr class="table-row">
           <th class="table-column">所在地</th>
-          <td class="table-column">すすきのソープ街</td>
+          <td class="table-description">すすきのソープ街</td>
         <tr class="table-row">
           <th class="table-column">設立年月日</th>
-          <td class="table-column">2020年5月予定</td>
+          <td class="table-description">2020年5月予定</td>
         </tr>
         <tr class="table-row">
           <th class="table-column">資本金</th>
-          <td class="table-column">5円(ご縁がありますように)</td>
+          <td class="table-description">5円(ご縁がありますように)</td>
         </tr>  
         <tr class="table-row">
           <th class="table-column">役員</th>
-          <td class="table-column">
-            代表取締役兼CEO兼焼肉部長　おしう<br>
+          <td class="table-description">
+            代表取締役兼CEO兼焼肉大臣　おしう<br>
             Pornhub監査役　みつぐ<br>
             テニスの王子様　りく<br>
-            アメスピ大臣　ゆう<br>
+            アメスピ大臣兼焼肉本部長　ゆう<br>
             天才エンジニア　たかぴろ<br>
             一般エンジニア系女性　おおむら<br>
             
@@ -86,15 +98,16 @@
         </tr>   
         <tr class="table-row">
           <th class="table-column">主要子会社</th>
-          <td class="table-column">:DeNA</td>
+          <td class="table-description">:DeNA</td>
         </tr>               
         <tr class="table-row">
           <th class="table-column">事業内容</th>
           <td class="table-column-project">
-          <ul>
+          <ul style="list-style-type: none;">
             <li>AV配信</li>
             <li>広告事業</li>
             <li>タバコ販売</li>
+            <li>密造酒販売</li>
             <li>援助交際</li>
           </ul>
           </td>
@@ -104,11 +117,12 @@
     </table>
   </div>
 </div>
+<div class="space"></div>
 
 <h1>History</h1>
 <div class="history">
   <h3>2020年</h3>
-  <ul class="ul-simple">
+  <ul style="list-style-type: none;"class="ul-simple">
     <li>
       <div>1月19日</div>
       <p class="ul-column">
@@ -137,7 +151,7 @@
     </li>
   </ul>  
   <h3>2019年</h3>
-  <ul class="ul-simple">
+  <ul style="list-style-type: none;" class="ul-simple">
     <li>
       <div>12月31日</div>
       <p class="ul-column">
