--- a/index.html
+++ b/index.html
@@ -1,218 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/styles.css">
-  <title>L-Boap/Website</title>
-</head>
-
-<header class="header">
-  <div class="home">
-    <h1 class="title">L-Boap</h1>
-    <p class="L-Boap">Local-Based Online Ad Platform</p>
-    <p class="description">札幌と大阪とシリコンバレーの天才大学生集団が作る未来の広告PF</p>
-  </div>
-
- <div class="header2">
-   <div class="messageLink">
-     <p><a href="#message">Message<br>CEO挨拶</a></p>
-   </div> 
-   <div class="profileLink">
-      <p><a href="#profile">Profile<br>会社紹介</a></p>
-   </div>
-   <div class="memberLink">
-     <p><a href="#member">Member<br>運営紹介</a></p>
-   </div>
- </div>
-  
-</header>
-
 <body>
-  <h1 id="message">Message</h1>
-  <div class="Message">
-    <div class="photo">
-      <img src="oshuu.png" width="720" height="480" alt="CEOの写真">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>L-Boap/Website</title>
+  </head>
+
+  <header class="header">
+    <div class="home">
+      <h1 class="title">L-Boap</h1>
+      <p class="L-Boap">Local-Based Online Ad Platform</p>
+      <p class="description">札幌と大阪とシリコンバレーの天才大学生集団が作る未来の広告PF</p>
     </div>
-  
-    <div class="sentence">
-    <p>I will change common sence of ad platform in the future with my mates!<br>
-      <br><br>
-      いっきっきの～き～w＼ｱｲｱｲｱｲ／ いっきっきの～き～w＼ｱｲｱｲｱｲ／
-      いっきっきの～き～w(ｵﾏﾝｺ?)＼ｱｲｱｲｱｲ／ いっきっきの～き～w(ｵﾁﾝｺ?)＼ｱｲｱｲｱｲ／
-      いっきっきの～き～w(ｵﾏﾝｺ?) いっきっきの～き～w(ｵﾁﾝｺ?)
-      ｱﾚ？ｱﾚ？ｱﾚ？wｱﾚｪ？(ゆっくんにしては味わってる)(もうヤバい)
-      ゆかり？呑んでなくない？ｳｫｳ ｳｫｳ⤴ ゆかり？呑んでなくない？ｳｫｳ ｳｫｳ⤴ ゆかり
-      おっぱいまんこまんこちんこｱｲ おっぱいまんこまんこちんこ
-      おっぱいまんこまんこちんこ おっぱいまんこまんこちんこ (もういいよっ！)
-      (声デカいよ…) <br>
-      ｵﾏﾝｺｯ!ｼｮｯﾊﾟｯﾋﾟｨｰww ﾅﾒﾀﾗﾎｯｹｯｷｮｰww ｽﾞｯｺﾝﾊﾞｯｺﾝ ｽﾞｯｺﾝﾊﾞｯｺﾝww ﾁﾝｹﾞｯ!wwﾏﾝｹﾞｯ!ww
-      ｵﾏﾝｺｯｼｮｯﾊﾟｯﾋﾟｨｰww ﾅﾒﾀﾗﾎｯｹｯｷｮｰww ｽﾞｯｺﾝﾊﾞｯｺﾝ ｽﾞｯｺﾝﾊﾞｯｺﾝww ﾁﾝｹﾞｯwｗﾏﾝｹﾞｯww
-      ｵﾏﾝｺｯｼｮｯﾊﾟｯﾋﾟｨｰww ﾅﾒﾀﾗﾎｯｹｯｷｮｰww ｽﾞｯｺﾝﾊﾞｯｺﾝ ｽﾞｯｺﾝﾊﾞｯｺﾝww ﾁﾝｹﾞｯwwﾏﾝｹﾞｯwｗ
-      ｵﾏﾝｺｼｮｯﾊﾟｯﾋﾟｨｰww ﾅﾒﾀﾗﾎｯｹｯｷｮｰww ｽﾞｯｺﾝﾊﾞｯｺﾝ ｽﾞｯｺﾝﾊﾞｯｺﾝww ﾁﾝｹﾞｯwwﾏﾝｹﾞｯww
-    </p>
+    <div class="home2">
+      <div class="messageLink">
+        <p>
+          <a href="#message">Message<br>
+           <div>CEO挨拶</div>
+          </a>
+        </p>
+      </div> 
+      <div class="profileLink">
+        <p>
+          <a href="#profile">Profile<br>
+           <div class="kotei">会社紹介</div>
+         </a>
+        </p>
+      </div>
+      <div class="memberLink">
+        <p>
+          <a href="#member">Member<br>
+           <div>運営紹介
+          </a>
+        </p>
+      </div>
+    </div>
+  </header>
+
+  <div class="message">
+    <h1 id="message">Message</h1> 
+    <div class="messageDetails">
+      <div class="photo">
+        <img src="oshuu.png" width="600" height="400">
+      </div>
+      <div class="sentence">
+        <p>
+          I will change common sence of ad platform in the future with my mates!<br>
+         <br>
+        </p>
+        <p class="yukari">
+          いっきっきの～き～w＼ｱｲｱｲｱｲ／ いっきっきの～き～w＼ｱｲｱｲｱｲ／<br>
+          いっきっきの～き～w(ｵﾏﾝｺ?)＼ｱｲｱｲｱｲ／ いっきっきの～き～w(ｵﾁﾝｺ?)＼ｱｲｱｲｱｲ／<br>
+          いっきっきの～き～w(ｵﾏﾝｺ?) いっきっきの～き～w(ｵﾁﾝｺ?)<br>
+          ｱﾚ？ｱﾚ？ｱﾚ？wｱﾚｪ？(ゆっくんにしては味わってる)(もうヤバい)<br>
+          ゆかり？呑んでなくない？ｳｫｳ ｳｫｳ⤴ ゆかり？呑んでなくない？ｳｫｳ ｳｫｳ⤴<br>
+          おっぱいまんこまんこちんこｱｲ おっぱいまんこまんこちんこ<br>
+          おっぱいまんこまんこちんこ おっぱいまんこまんこちんこ<br>
+          (もういいよっ！)(声デカいよ…) <br>
+          ｵﾏﾝｺｯｼｮｯﾊﾟｯﾋﾟｨｰww ﾅﾒﾀﾗﾎｯｹｯｷｮｰww<br>
+          ｽﾞｯｺﾝﾊﾞｯｺﾝ ｽﾞｯｺﾝﾊﾞｯｺﾝww ﾁﾝｹﾞｯwwﾏﾝｹﾞｯww<br>
+          ｵﾏﾝｺｯｼｮｯﾊﾟｯﾋﾟｨｰww ﾅﾒﾀﾗﾎｯｹｯｷｮｰww<br>
+          ｽﾞｯｺﾝﾊﾞｯｺﾝ ｽﾞｯｺﾝﾊﾞｯｺﾝww ﾁﾝｹﾞｯwwﾏﾝｹﾞｯww<br>
+          
+        </p>
+      </div>
     </div>
   </div>
-  <p>CEO Shuta Kuwabara　(※自称ブサイクらしい)</p>
+  <p>CEO Shuta Kuwabara　(※本人曰くブサイクらしい)</p>
 
-  <div class="space"></div>
-
-<h1 id="profile">Profile</h1>
-  <p class="CEO">
-    CEO桑原率いる愉快な仲間たちの仮想世界作り。
-    サマーウォーズのOZの世界観だよね。
-  </p>
-  <div class="profile">
-  <h3>会社概要</h3>
-  <div>
-    <table class="table-simple">
-      <tbody>
-        <div>
-        <tr class="table-row">
-          <th class="table-column">商号</th>
-          <td class="table-description">L-Boap ,Co</td>
-        </tr>
-        <tr class="table-row">
-          <th class="table-column">所在地</th>
-          <td class="table-description">すすきのソープ街</td>
-        <tr class="table-row">
-          <th class="table-column">設立年月日</th>
-          <td class="table-description">2020年5月予定</td>
-        </tr>
-        <tr class="table-row">
-          <th class="table-column">資本金</th>
-          <td class="table-description">5円(ご縁がありますように)</td>
-        </tr>  
-        <tr class="table-row">
-          <th class="table-column">役員</th>
-          <td class="table-description">
-            代表取締役兼CEO兼焼肉大臣　おしう<br>
-            Pornhub監査役　みつぐ<br>
-            テニスの王子様　りく<br>
-            アメスピ大臣兼焼肉本部長　ゆう<br>
-            天才エンジニア　たかぴろ<br>
-            一般エンジニア系女性　おおむら<br>
-            
-          </td>
-        </tr>   
-        <tr class="table-row">
-          <th class="table-column">主要子会社</th>
-          <td class="table-description">:DeNA</td>
-        </tr>               
-        <tr class="table-row">
-          <th class="table-column">事業内容</th>
-          <td class="table-column-project">
-          <ul style="list-style-type: none;">
-            <li>AV配信</li>
-            <li>広告事業</li>
-            <li>タバコ販売</li>
-            <li>密造酒販売</li>
-            <li>援助交際</li>
-          </ul>
-          </td>
-        </tr>        
-        </tr>
+  <div class="profile"></div>
+    <h1 id="profile">Profile</h1>
+    <p class="CEO">
+      CEO桑原率いる愉快な仲間たちの仮想世界作り。
+      サマーウォーズのOZの世界観だよね。
+    </p>
+    <div class="profileDetails">
+      <h3>会社概要</h3>
+      <table class="table-simple">
+        <tbody>
+          <div>
+            <tr class="table-row">
+              <th class="table-column">商号</th>
+              <td class="table-description">L-Boap ,Co</td>
+            </tr>
+            <tr class="table-row">
+              <th class="table-column">所在地</th>
+              <td class="table-description">すすきのソープ街</td>
+            </tr>
+            <tr class="table-row">
+              <th class="table-column">設立年月日</th>
+              <td class="table-description">2020年5月予定</td>
+            </tr>
+            <tr class="table-row">
+              <th class="table-column">資本金</th>
+              <td class="table-description">5円(ご縁がありますように)</td>
+            </tr>  
+            <tr class="table-row">
+              <th class="table-column">役員</th>
+              <td class="table-description">
+                代表取締役兼CEO兼焼肉大臣　おしう<br>
+                Pornhub監査役　みつぐ<br>
+                テニスの王子様　りく<br>
+                アメスピ大臣兼焼肉本部長　ゆう<br>
+                天才エンジニア　たかぴろ<br>
+                一般エンジニア系女性　おおむら<br>
+              </td>
+            </tr>   
+            <tr class="table-row">
+             <th class="table-column">主要子会社</th>
+             <td class="table-description">:DeNA</td>
+            </tr>               
+            <tr class="table-row">
+              <th class="table-column">事業内容</th>
+              <td class="table-column-project">
+                <ul style="list-style-type: none;">
+                  <li>AV配信</li>
+                  <li>広告事業</li>
+                  <li>タバコ販売</li>
+                  <li>密造酒販売</li>
+                  <li>援助交際</li>
+                </ul>
+              </td>
+            </tr>        
+          </div>
       </tbody>
     </table>
   </div>
-</div>
-<div class="space"></div>
 
-<h1>History</h1>
-<div class="history">
-  <h3>2020年</h3>
-  <ul style="list-style-type: none;"class="ul-simple">
-    <li>
-      <div>1月19日</div>
-      <p class="ul-column">
-        おーむら女性と判明。
-      </p>
-    <li>
-      <div>1月18日</div>
-      <p class="ul-column">
-        Rina Omura参画。Yu Hiraga困惑。
-      </p>
-    </li>
-    </li>
-    <li>
-      <div>1月14日</div>
-      <p class="ul-column">
-        CEO桑原修太（株）DeNAの買収を決意。<br>
-        のちにDeNAを買収することになるが、この時点では二社には天地の差があった。</p>
-    </li>
-    <li>
-      <div>1月11日</div>
-      <p class="ul-column">茂木貴紀脱退。</p>
-    </li>
-    <li>
-      <div>1月1日</div>
-      <p class="ul-column">初ユーザーアンケート拡散。</p>
-    </li>
-  </ul>  
-  <h3>2019年</h3>
-  <ul style="list-style-type: none;" class="ul-simple">
-    <li>
-      <div>12月31日</div>
-      <p class="ul-column">
-        L-Boap結成。教育系コミュニティRacoonの運営メンバーが多数参画。<br>
-        大晦日にも関わらず、年末を全く感じることなくMTGが行われた。
-      </p>
-    </li>
-  </ul>
-</div>
+  <div class="history">
+    <h1>History</h1> 
+    <h3>2020年</h3>
+    <ul style="list-style-type: none;"class="ul-simple">
+      <li>
+       <div>1月19日</div>
+       <p class="ul-column">
+          おーむら女性と判明。たなかさんと結婚していたらしい。
+       </p>
+      </li>
+      <li>
+        <div>1月18日</div>
+        <p class="ul-column">
+          Rina Omura参画。Yu Hiraga困惑。
+        </p>
+      </li>
+      <li>
+        <div>1月14日</div>
+        <p class="ul-column">
+          CEO桑原修太（株）DeNAの買収を決意。<br>
+          のちにDeNAを買収することになるが、この時点では二社には天地の差があった。</p>
+      </li>
+      <li>
+        <div>1月11日</div>
+        <p class="ul-column">茂木貴紀脱退。</p>
+      </li>
+      <li>
+        <div>1月1日</div>
+        <p class="ul-column">初ユーザーアンケート拡散。</p>
+      </li>
+    </ul>  
+    <h3>2019年</h3>
+    <ul style="list-style-type: none;" class="ul-simple">
+      <li>
+        <div>12月31日</div>
+        <p class="ul-column">
+          L-Boap結成。教育系コミュニティRacoonの運営メンバーが多数参画。<br>
+          大晦日にも関わらず、年末を全く感じることなくMTGが行われた。
+        </p>
+      </li>
+    </ul>
+  </div>
 
+  <div class="memeber">
+    <h1 id="member">Memeber</h1>
+    <div class="block one">
+      <h4> 名前 </h4>
+      <P>くわばら</P>
+      <h4>経歴</h4>
+      <p>小卒</p>
+      <h4>一言</h4>
+      <p>チンポ</p>
+    </div>
 
-<h1 id="member">Memeber</h1>
-<div class="block one">
+    <div class="block one">
+      <h4> 名前 </h4>
+      <P>くわばら</P>
+      <h4>経歴</h4>
+      <p>中卒</p>
+      <h4>一言</h4>
+      <p>ぴえん</p>
+    </div>
 
-  <h4> 名前 </h4>
-  <P>くわばら</P>
+    <div class="block one">
+      <h4> 名前 </h4>
+      <P>くわばら</P>
+      <h4>経歴</h4>
+      <p>高卒</p>
+      <h4>一言</h4>
+      <p>ぴえん</p>
+    </div>
 
-  <h4>経歴</h4>
-  <p>小卒</p>
-
-  <h4>一言</h4>
-  <p>チンポ</p>
-
-
-<div class="block one">
-  <h4> 名前 </h4>
-  <P>くわばら</P>
-
-  <h4>経歴</h4>
-  <p>中卒</p>
-
-  <h4>一言</h4>
-  <p>ぴえん</p>
+    <div class="block one">
+      <h4> 名前 </h4>
+      <P>くわばら</P>
+      <h4>経歴</h4>
+      <p>大卒</p>
+      <h4>一言</h4>
+      <p>ぴえん</p>
+    </div>
+  </div>
   
- </div>
-
-
-<div class="block one">
-  <h4> 名前 </h4>
-  <P>くわばら</P>
-
-  <h4>経歴</h4>
-  <p>高卒</p>
-
-  <h4>一言</h4>
-  <p>ぴえん</p>
-</div>
-
-<div class="block one">
-
-  <h4> 名前 </h4>
-  <P>くわばら</P>
-
-  <h4>経歴</h4>
-  <p>大卒</p>
-
-  <h4>一言</h4>
-  <p>ぴえん</p>
-
-   </div>
-</div>
-
+ 
 </body>
 </html>
