margeの際の不具合修正

--- a/index.html
+++ b/index.html
@@ -173,51 +173,8 @@
     </ul>
   </div>
 
-  <div class="memeber">
-    <h1 id="member">Memeber</h1>
-    <div class="block one">
-      <h4> 名前 </h4>
-      <P>くわばら</P>
-      <h4>経歴</h4>
-      <p>小卒</p>
-      <h4>一言</h4>
-      <p>チンポ</p>
-    </div>
-
-    <div class="block one">
-      <h4> 名前 </h4>
-      <P>くわばら</P>
-      <h4>経歴</h4>
-      <p>中卒</p>
-      <h4>一言</h4>
-      <p>ぴえん</p>
-    </div>
-
-    <div class="block one">
-      <h4> 名前 </h4>
-      <P>くわばら</P>
-      <h4>経歴</h4>
-      <p>高卒</p>
-      <h4>一言</h4>
-      <p>ぴえん</p>
-    </div>
-
-    <div class="block one">
-      <h4> 名前 </h4>
-      <P>くわばら</P>
-      <h4>経歴</h4>
-      <p>大卒</p>
-      <h4>一言</h4>
-      <p>ぴえん</p>
-    </div>
-  </div>
-  
- 
-=======
-</div>
-
-<h1>History</h1>
-<div class="history">
+<div class="history"></div>
+  <h1>History</h1>
   <h3>2020年</h3>
   <ul class="ul-simple">
     <li>
@@ -255,7 +212,7 @@
   </ul>
 </div>
 
-
+<div class="memeber">
 <h1>member</h1>
 <div class="memberone">
   <div class="memberone">
@@ -315,6 +272,7 @@
 
   <h4>一言</h4>
   <p>チンポ</p>
+</div>
 </div>
 
 
