多少の修正

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </tr>               
             <tr class="table-row">
               <th class="table-column">事業内容</th>
-              <td class="table-column-project">
+              <td class="table-description">
                 <ul style="list-style-type: none;">
                   <li>AV配信</li>
                   <li>広告事業</li>
@@ -173,46 +173,7 @@
     </ul>
   </div>
 
-<div class="history"></div>
-  <h1>History</h1>
-  <h3>2020年</h3>
-  <ul class="ul-simple">
-    <li>
-      <div>1月18日</div>
-      <p class="ul-column">
-        Rina Omura参画。Yu Hiraga困惑。
-      </p>
-    </li>
-    <li>
-      <div>1月14日</div>
-      <p class="ul-column">
-        CEO桑原修太（株）DeNAの買収を決意。
-        のちにDeNAを買収することになるが、この時点では二社には天地の差があった。</p>
-    </li>
-    <li>
-      <div>1月11日</div>
-      <p class="ul-column">茂木貴紀脱退。</p>
-    </li>
-    <li>
-      <div>1月1日</div>
-      <p class="ul-column">初ユーザーアンケート拡散。</p>
-    </li>
-  </ul>  
-  <h3>2019年</h3>
-  <ul class="ul-simple">
-    <li>
-      <div>12月31日</div>
-      <p class="ul-column">
-        L-Boap結成。教育系コミュニティRacoonの運営メンバーが多数参画。
-      </p>
-      <p class="ul-column">
-        大晦日にも関わらず、年末を全く感じることなくMTGが行われた。
-      </p>
-    </li>
-  </ul>
-</div>
-
-<div class="memeber">
+<div class="memeber" id="member">
 <h1>member</h1>
 <div class="memberone">
   <div class="memberone">
