--- a/index.html
+++ b/index.html
@@ -174,68 +174,76 @@
   </div>
 
 <div class="memeber" id="member">
-<h1>member</h1>
-<div class="memberone">
+ <h1>Member</h1>
   <div class="memberone">
+   <div class="memberone">
+    <img src="oshuu.png" width="450" height="270" alt="CEOの写真">
+   </div>
+
+   <p class="one"></p>
+   名前 
+   くわばら</br>
+
+   経歴
+   小卒</br>
+
+   一言
+   チンポ</br>
+   </p>
+  </div>
+
+ <div class="membertwo">
+  <div class="membertwo">
     <img src="oshuu.png" width="450" height="270" alt="CEOの写真">
   </div>
 
-  <h4> 名前 </h4>
-  <P>くわばら</P>
+  <p class="two"></p>
+   名前 
+   くわばら</br>
 
-  <h4>経歴</h4>
-  <p>小卒</p>
+   経歴
+   小卒</br>
 
-  <h4>一言</h4>
-  <p>チンポ</p>
-</div>
+   一言
+   チンポ</br>
+   </p>
+ </div>
 
-<div class="membertwo">
-  <div class="membertwo">
-    <img src="nigger.png" width="450" height="270" alt="CEOの写真">
-  </div>
-
-  <h4> 名前 </h4>
-  <P>くわばら</P>
-
-  <h4>経歴</h4>
-  <p>小卒</p>
-
-  <h4>一言</h4>
-  <p>チンポ</p>
-</div>
-
-<div class="memberthree">
+ <div class="memberthree">
   <div class="memberthree">
     <img src="oshuu.png" width="450" height="270" alt="CEOの写真">
   </div>
 
-  <h4> 名前 </h4>
-  <P>くわばら</P>
+  <p class="three"></p>
+   名前 
+   くわばら</br>
 
-  <h4>経歴</h4>
-  <p>小卒</p>
+   経歴
+   小卒</br>
 
-  <h4>一言</h4>
-  <p>チンポ</p>
-</div>
+   一言
+   チンポ</br>
+   </p>
+ </div>
 
-<div class="memberofour">
+ <div class="memberofour">
   <div class="memberfour">
     <img src="oshuu.png" width="450" height="270" alt="CEOの写真">
   </div>
 
-  <h4> 名前 </h4>
-  <P>くわばら</P>
+  <p class="one"></p>
+   名前 
+   くわばら</br>
 
-  <h4>経歴</h4>
-  <p>小卒</p>
-  
-  <h4>一言</h4>
-  <p>チンポ</p>
-</div>
-</div>
+   経歴
+   小卒</br>
 
+   一言
+   チンポ</br>
+   </p>
+
+ </div>
+</div>
 
 </body>
 </html>
