memeberをmemberに直した

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </ul>
   </div>
 
-<div class="memeber" id="member">
+<div class="member" id="member">
  <h1>Member</h1>
   <div class="memberone">
    <div class="memberone">
@@ -197,7 +197,7 @@
     <img src="oshuu.png" width="450" height="270" alt="CEOの写真">
   </div>
 
-  <p class="two"></p>
+  <p>
    名前 
    くわばら</br>
 
