--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         </p>
       </div> 
       <div class="profileLink">
-        <p>
+        <p class="kotei">
           <a href="#profile">Profile<br>
-           <div class="kotei">会社紹介</div>
-         </a>
+            <div>会社紹介</div>
+          </a>
         </p>
       </div>
       <div class="memberLink">
         <p>
           <a href="#member">Member<br>
-           <div>運営紹介
+           <div>運営紹介</div>
           </a>
         </p>
       </div>
@@ -134,6 +134,12 @@
     <h1>History</h1> 
     <h3>2020年</h3>
     <ul style="list-style-type: none;"class="ul-simple">
+      <li>
+        <div>1月20日</div>
+        <p class="ul-column">
+          JavaScriptのおべんつよ始めた。
+        </p>
+      </li>
       <li>
        <div>1月19日</div>
        <p class="ul-column">
